syntax="proto3";

package cruisecompanion;
option java_package = "com.castelcode.cruisecompanion";
option java_outer_classname = "TripInfoProtos";

message SharedTripInfo {
  repeated TripInfo shared_trip_information = 1;
}

message TripInfo {
  oneof info{
    HotelInformation hotel_info = 1;
    FlightInformation flight_info = 2;
    CruiseInformation cruise_info = 3;
    BusInformation bus_info = 4;
  }
}

message HotelInformation {
  string name = 1;
  string address = 2;
  string city = 3;
  string state = 4;
  string confrimation_number = 5;
  string phone_number = 6;
  string check_in_date = 7;
  string check_in_time = 8;
  string check_out_date = 9;
  string check_out_time = 10;
}

message FlightInformation {
  string airline = 1;
  string flight_number = 2;
  string seat_number = 3;
  string origin = 4;
  string destination = 5;
  string departure_date = 6;
  string departure_time = 7;
  string arrival_time = 8;
  string confirmation_number = 9;
  string phone_number = 10;
}

message CruiseInformation {
  string cruise_line = 1;
  string ship_name = 2;
  string room_number = 3;
  string departure_date = 4;
  string departure_time = 5;
  string confirmation_number = 6;
  string phone_number = 7;
}

message BusInformation {
  string bus_line = 1;
  string seat_number = 2;
  string origin = 3;
  string destination = 4;
  string departure_date = 5;
  string departure_time = 6;
  string arrival_time = 7;
  string confirmation_number = 8;
  string phone_number = 9;
}
